--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,15 @@ body{
 }
 h1{
   font-size: 5.62rem;
-  margin: 10px auto 0 auto;
+  margin: 10px auto 0px auto;
   font-family: 'Sacramento', cursive;
   color: #66BFBF;
+}
+h1:hover{
+  color: #11999E;
+}
+#subtitle{
+  margin: 0px;
 }
 h2{
   font-size: 2.5rem;
@@ -42,10 +48,10 @@ a:hover{
 .top-container {
   background-color: #E4F9F5;
   position: relative;
-  padding-top: 100px;
+  padding-top: 90px;
 }
 .middle-container {
-  padding-top: 100px;
+  padding-top: 70px;
   padding-bottom: 100px;
 }
 .bottom-container {
@@ -54,12 +60,15 @@ a:hover{
 }
 .bottom-cloud{
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
+}
+.landimg{
+  margin-top: 30px;
 }
 .top-cloud{
   position: absolute;
-  right: 300px;
+  right: 250px;
   top: 50px;
 }
 .footer-link{
@@ -71,12 +80,12 @@ a:hover{
   text-align: left;
 }
 .mobi-img{
-  width: 25%;
+  width: 20%;
   float: left;
   margin-right: 30px;
 }
 .code-img{
-  width: 25%;
+  width: 20%;
   float: right;
   margin-left: 30px;
 }
@@ -85,16 +94,31 @@ a:hover{
   margin : auto;
 }
 .profile{
-  padding-bottom: 100px;
+  padding-bottom: 80px;
 }
 .contact-me{
   padding-top: 50px;
   padding-bottom: 50px;
 }
+.skills{
+  padding-top: 50px;
+}
 .copyright {
   color: #EAF6F6;
   font-size: 0.75rem;
   padding: 20px 0px;
+}
+.prospan{
+  text-decoration: underline;
+}
+.social-linkedin-img {
+  width:3%;
+}
+.social-facebook-img {
+  width:3%;
+}
+.social-skype-img {
+  width:3%;
 }
 .contactbtn {
   margin-top: 20px;
@@ -115,10 +139,10 @@ text-indent:0;
 	border:1px solid #11999E;
 	display:inline-block;
 	color:#ffffff;
-	font-family: 'Merriweather', serif;
+	font-family: 'Montserrat', serif;
 	font-size:15px;
-	font-weight:bold;
-	font-style:normal;
+	font-weight:normal;
+	font-style: normal;
 height:50px;
 	line-height:50px;
 width:140px;
